[tool.poetry]
name = "recsys-kion"
version = "0.1.0"
description = "A course on Recommendation systems based on kion data."
authors = ["Pavel Kochkin <kochkin27@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.23.4"
pandas = "^1.5.1"
scikit-learn = "^1.1.2"
polars = "^0.15.5"
pandas = "^1.3.5"
rectools = "^0.3.0"
matplotlib = "^3.2.2"
seaborn = "^0.11.2"
requests = "^2.23.0"
scipy = "^1.7.3"
lightfm = "^1.16"
implicit = "^0.4.4"
sklearn-pandas = "^1.8.0"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
flake8 = "^5.0.4"
flake8-isort = "^5.0.0"
flake8-builtins = "^2.0.0"
flake8-comprehensions = "^3.10.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.4.0"
flake8-pytest = "^1.4"
pep8-naming = "^0.13.2"
black = "^22.10.0"


[tool.isort]
profile = "black"

[tool.black]
pandarallel = "==1.4.8"
line-length = 100
target-version = ['py38']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
